# blood-donation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  deployment.md  docker-compose.prod.yml  docker-compose.yml  flow.excalidraw  main.py  pyproject.toml  requirements.txt  reset_db.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: c0cea8e3054d_initial_schema.py
app/: config.py  database.py  main.py  rate_limit.py
app/dependencies/: auth.py
app/models/: __init__.py  request.py  user.py
app/routes/: auth_routes.py  blood_group_routes.py  donor_routes.py  location_routes.py  request_route.py  user_routes.py
app/schemas/: auth_schema.py  blood_group_schema.py  donor_schema.py  location_schema.py  request_schema.py  user_schema.py
app/services/: auth_service.py  blood_group_service.py  donor_service.py  location_service.py  request_service.py
app/utils/: reference_data.py
data/: bd-upazilas.json  blood_groups.json
tests/: conftest.py  helpers.py  test_auth.py  test_donors.py  test_health.py  test_locations_and_blood_groups.py  test_requests.py  test_users.py
